# risk-equity-audit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  Makefile  PLAN.md  PROTOCOL.md  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
data/: checksums.txt
demo/: README.md  run_demo.py
docs/: decisions.md  make_figures.py  methods.md  roadmap-v2.md
examples/benchmark/: README.md  run_benchmark.py
examples/benchmark/tests/: test_benchmark.py
examples/meps/: METHODS.md  README.md  _paths.py  features.py  make_figures.py  models.py
examples/meps/data/: checksums.txt
examples/meps/etl/: dictionary.yml  download.py  meps.py
examples/meps/scripts/: build_panel.py  download_meps.py  profile_meps.py  run_audit.py  train_models.py
examples/meps/tests/: test_etl_schema.py  test_etl_treatment.py
scripts/: build_chile.py  build_panel.py  download_meps.py  profile_meps.py  run_audit.py  train_models.py
src/riskaudit/: __init__.py  _config.py  features.py  models.py
src/riskaudit/audit/: __init__.py  _common.py  ablation.py  capture.py  curves.py  frontier.py  groups.py  lift.py  reclassification.py  report.py  robustness.py  rtm.py
src/riskaudit/chile/: figures.py  parsers.py
src/riskaudit/etl/: dictionary.yml  download.py  meps.py
tests/: test_audit.py  test_benchmark.py  test_demo.py  test_etl_ranges.py  test_etl_schema.py  test_etl_treatment.py  test_features.py  test_frontier.py  test_groups.py  test_models.py  test_robustness.py  test_smoke.py  test_validation_obermeyer.py
validation/obermeyer_2019/: COVERAGE.md  download.py  reproduce.py
validation/obermeyer_2019/tests/: test_validation_obermeyer.py
