[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "riskaudit"
version = "0.1.0"
description = "Label-choice bias audit for healthcare risk-stratification models"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Conrado" }]
keywords = [
    "algorithmic-fairness",
    "health-equity",
    "risk-stratification",
    "label-choice-bias",
    "meps",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "pyarrow",
    "pyreadstat",
    "lightgbm",
    "scikit-learn",
    "shap",
    "pyyaml",
    "requests",
    "matplotlib",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "pre-commit"]

[tool.hatch.build.targets.wheel]
packages = ["src/riskaudit"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["riskaudit.audit"]
branch = true
