[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "riskaudit"
dynamic = ["version"]
description = "Audit any risk-stratification model for label-choice bias — how much real need it leaves behind"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Conrado Proromant" }]
keywords = [
    "algorithmic-fairness",
    "health-equity",
    "risk-stratification",
    "label-choice-bias",
    "auditing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
# Core is light — the auditor only needs these. The MEPS example (etl/models)
# pulls the heavy stack via the `meps` extra.
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
]

[project.optional-dependencies]
meps = ["pyarrow", "pyreadstat", "lightgbm", "shap", "pyyaml", "requests"]
dev = ["riskaudit[meps]", "pytest", "pytest-cov", "ruff", "pre-commit"]

[project.urls]
Homepage = "https://github.com/CProromant/risk-equity-audit"
Repository = "https://github.com/CProromant/risk-equity-audit"
Changelog = "https://github.com/CProromant/risk-equity-audit/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/riskaudit/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/riskaudit"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests", "examples", "validation"]
addopts = "-q"

[tool.coverage.run]
source = ["riskaudit.audit"]
branch = true
